# rust-apps

./: README.md
rust-pulsar/: docker-compose.yml
rust-pulsar/pulsar/: Dockerfile
rust-pulsar/pulsar-manager/: Dockerfile
rust-pulsar/python-client/: consumer.py  producer.py
rust-pulsar/rust-client/: Cargo.toml
rust-pulsar/rust-client/src/consumer/: main.rs
